# snake-game

snake-game/: CMakeLists.txt  main.cpp
snake-game/inc/: Board.hpp  Food.hpp  Game.hpp  MoveDirection.hpp  Snake.hpp
snake-game/src/: Board.cpp  Food.cpp  Game.cpp  Snake.cpp  main.cpp
snake-game/tst/: CMakeLists.txt  FoodTest.cpp  SnakeTest.cpp
